@@ -5,6 +5,10 @@ JasperReports Change Log
 JasperReports 3.1.4 (2009-02-xx)
 -----------------------------------
 
+- multiple scriplets per report;
+
+- report governors for max pages and timeout;
+
 - new JASPER_REPORT built-in parameter;
 
 - chart element live preview in design mode;
